[tool.poetry]
name = "trade_fill"
version = "0.1.0"
description = ""
authors = ["Rafał Misiarek <misiarek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
